// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders a closed dropdown 1`] = `
.emotion-0 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
}

.emotion-0::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1 {
  display: inline-block;
}

<DropdownMenu
  preferredDirections={
    Array [
      "bottom-end",
      "bottom-start",
      "bottom",
      "top-end",
      "top",
      "top-start",
    ]
  }
  trigger="Dropdown trigger"
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      aria-owns={null}
      className="emotion-1"
      role="combobox"
    >
      <Dropdownable
        dropdown={
          <Popover
            aria-labelledby="downshift-0-label"
            id="downshift-0-menu"
            menuRef={[Function]}
            role="listbox"
          >
            <div
              className=""
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-0-item-0"
                index={0}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="edit"
                >
                  Edit
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-0-item-1"
                index={1}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="scale"
                >
                  Scale
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-0-item-2"
                index={2}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restart"
                >
                  Restart
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-0-item-3"
                index={3}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="stop"
                >
                  Stop
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
          </Popover>
        }
        open={false}
        preferredDirections={
          Array [
            "bottom-end",
            "bottom-start",
            "bottom",
            "top-end",
            "top",
            "top-start",
          ]
        }
      >
        <div>
          <button
            aria-haspopup={true}
            aria-label="open menu"
            className="emotion-0"
            data-toggle={true}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            type="button"
          >
            Dropdown trigger
          </button>
        </div>
      </Dropdownable>
    </div>
  </Downshift>
</DropdownMenu>
`;

exports[`Dropdown renders a dropdown with a max height 1`] = `
.emotion-0 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
}

.emotion-0::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-1 {
  display: inline-block;
}

<DropdownMenu
  menuMaxHeight={50}
  preferredDirections={
    Array [
      "bottom-end",
      "bottom-start",
      "bottom",
      "top-end",
      "top",
      "top-start",
    ]
  }
  trigger="Dropdown trigger"
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={false}
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      aria-owns={null}
      className="emotion-1"
      role="combobox"
    >
      <Dropdownable
        dropdown={
          <Popover
            aria-labelledby="downshift-2-label"
            id="downshift-2-menu"
            maxHeight={50}
            menuRef={[Function]}
            role="listbox"
          >
            <div
              className=""
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-2-item-0"
                index={0}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="edit"
                >
                  Edit
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-2-item-1"
                index={1}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="scale"
                >
                  Scale
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-2-item-2"
                index={2}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restart"
                >
                  Restart
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-2-item-3"
                index={3}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="stop"
                >
                  Stop
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
          </Popover>
        }
        open={false}
        preferredDirections={
          Array [
            "bottom-end",
            "bottom-start",
            "bottom",
            "top-end",
            "top",
            "top-start",
          ]
        }
      >
        <div>
          <button
            aria-haspopup={true}
            aria-label="open menu"
            className="emotion-0"
            data-toggle={true}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            type="button"
          >
            Dropdown trigger
          </button>
        </div>
      </Dropdownable>
    </div>
  </Downshift>
</DropdownMenu>
`;

exports[`Dropdown renders an open dropdown 1`] = `
.emotion-0 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
}

.emotion-0::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-6 {
  display: inline-block;
}

.emotion-5 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-1 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-top: 8px;
}

.emotion-2 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
}

.emotion-4 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-bottom: 8px;
}

<DropdownMenu
  initialIsOpen={true}
  preferredDirections={
    Array [
      "bottom-end",
      "bottom-start",
      "bottom",
      "top-end",
      "top",
      "top-start",
    ]
  }
  trigger="Dropdown trigger"
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    initialIsOpen={true}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={true}
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      aria-owns="downshift-1-menu"
      className="emotion-6"
      role="combobox"
    >
      <Dropdownable
        dropdown={
          <Popover
            aria-labelledby="downshift-1-label"
            id="downshift-1-menu"
            menuRef={[Function]}
            role="listbox"
          >
            <div
              className=""
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-1-item-0"
                index={0}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="edit"
                >
                  Edit
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-1-item-1"
                index={1}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="scale"
                >
                  Scale
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-1-item-2"
                index={2}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restart"
                >
                  Restart
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-1-item-3"
                index={3}
                isActive={false}
                listLength={4}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="stop"
                >
                  Stop
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
          </Popover>
        }
        open={true}
        preferredDirections={
          Array [
            "bottom-end",
            "bottom-start",
            "bottom",
            "top-end",
            "top",
            "top-start",
          ]
        }
      >
        <div>
          <button
            aria-haspopup={true}
            aria-label="close menu"
            className="emotion-0"
            data-toggle={true}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            type="button"
          >
            Dropdown trigger
          </button>
        </div>
        <clickOutside(DropdownContents)
          open={true}
        >
          <DropdownContents
            open={true}
          >
            <ForwardRef
              style={
                Object {
                  "left": "0",
                  "position": "absolute",
                  "top": "0",
                  "zIndex": 2,
                }
              }
            >
              <Overlay
                innerRef={[Function]}
                overlayRoot={
                  .emotion-4 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-top: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
}

.emotion-3 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-bottom: 8px;
}

<body>
                    <div>
                      <div
                        style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                      >
                        <div
                          aria-labelledby="downshift-1-label"
                          class="emotion-4"
                          data-cy="popover"
                          id="downshift-1-menu"
                          role="listbox"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-3"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-3"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </body>
                }
                style={
                  Object {
                    "left": "0",
                    "position": "absolute",
                    "top": "0",
                    "zIndex": 2,
                  }
                }
              >
                <Portal
                  containerInfo={
                    .emotion-4 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-top: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
}

.emotion-3 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-bottom: 8px;
}

<div>
                      <div
                        style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                      >
                        <div
                          aria-labelledby="downshift-1-label"
                          class="emotion-4"
                          data-cy="popover"
                          id="downshift-1-menu"
                          role="listbox"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-3"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-3"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <div
                    style={
                      Object {
                        "left": "0",
                        "position": "absolute",
                        "top": "0",
                        "zIndex": 2,
                      }
                    }
                  >
                    <Popover
                      aria-labelledby="downshift-1-label"
                      id="downshift-1-menu"
                      menuRef={[Function]}
                      role="listbox"
                    >
                      <div
                        aria-labelledby="downshift-1-label"
                        className="emotion-5"
                        data-cy="popover"
                        id="downshift-1-menu"
                        role="listbox"
                        style={
                          Object {
                            "maxHeight": undefined,
                            "maxWidth": undefined,
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className=""
                          key="dropdown-0"
                        >
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-1-item-0"
                            index={0}
                            isActive={false}
                            key=".$edit"
                            listLength={4}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-0"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Edit
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-1-item-1"
                            index={1}
                            isActive={false}
                            key=".$scale"
                            listLength={4}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-2"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-1"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Scale
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-1-item-2"
                            index={2}
                            isActive={false}
                            key=".$restart"
                            listLength={4}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-2"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-2"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Restart
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-1-item-3"
                            index={3}
                            isActive={false}
                            key=".$stop"
                            listLength={4}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-4"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-3"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Stop
                            </div>
                          </PopoverListItem>
                        </div>
                      </div>
                    </Popover>
                  </div>
                </Portal>
              </Overlay>
            </ForwardRef>
          </DropdownContents>
        </clickOutside(DropdownContents)>
      </Dropdownable>
    </div>
  </Downshift>
</DropdownMenu>
`;

exports[`Dropdown renders an open dropdown with multiple sections 1`] = `
.emotion-0 {
  background: none;
  border: 0;
  color: inherit;
  font: inherit;
  line-height: normal;
  overflow: visible;
  padding: 0;
  text-align: inherit;
}

.emotion-0::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.emotion-10 {
  display: inline-block;
}

.emotion-5 {
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-top-style: solid;
}

.emotion-9 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-1 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-top: 8px;
}

.emotion-2 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-bottom: 8px;
}

<DropdownMenu
  initialIsOpen={true}
  preferredDirections={
    Array [
      "bottom-end",
      "bottom-start",
      "bottom",
      "top-end",
      "top",
      "top-start",
    ]
  }
  trigger="Dropdown trigger"
>
  <Downshift
    defaultHighlightedIndex={null}
    defaultIsOpen={false}
    environment={[Window]}
    getA11yStatusMessage={[Function]}
    initialIsOpen={true}
    itemToString={[Function]}
    onChange={[Function]}
    onInputValueChange={[Function]}
    onOuterClick={[Function]}
    onSelect={[Function]}
    onStateChange={[Function]}
    onUserAction={[Function]}
    scrollIntoView={[Function]}
    selectedItemChanged={[Function]}
    stateReducer={[Function]}
    suppressRefError={false}
  >
    <div
      aria-expanded={true}
      aria-haspopup="listbox"
      aria-labelledby="downshift-3-label"
      aria-owns="downshift-3-menu"
      className="emotion-10"
      role="combobox"
    >
      <Dropdownable
        dropdown={
          <Popover
            aria-labelledby="downshift-3-label"
            id="downshift-3-menu"
            menuRef={[Function]}
            role="listbox"
          >
            <div
              className=""
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-0"
                index={0}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="edit"
                >
                  Edit
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-1"
                index={1}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="scale"
                >
                  Scale
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
            <div
              className="emotion-5"
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-2"
                index={0}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restart"
                >
                  Restart
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-3"
                index={1}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="restartDelay"
                >
                  Restart Delay
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
            <div
              className="emotion-5"
            >
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-4"
                index={0}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="pause"
                >
                  Pause
                </DropdownMenuItem>
              </PopoverListItem>
              <PopoverListItem
                aria-selected={false}
                id="downshift-3-item-5"
                index={1}
                isActive={false}
                listLength={2}
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseMove={[Function]}
                role="option"
              >
                <DropdownMenuItem
                  value="stop"
                >
                  Stop
                </DropdownMenuItem>
              </PopoverListItem>
            </div>
          </Popover>
        }
        open={true}
        preferredDirections={
          Array [
            "bottom-end",
            "bottom-start",
            "bottom",
            "top-end",
            "top",
            "top-start",
          ]
        }
      >
        <div>
          <button
            aria-haspopup={true}
            aria-label="close menu"
            className="emotion-0"
            data-toggle={true}
            onBlur={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            role="button"
            type="button"
          >
            Dropdown trigger
          </button>
        </div>
        <clickOutside(DropdownContents)
          open={true}
        >
          <DropdownContents
            open={true}
          >
            <ForwardRef
              style={
                Object {
                  "left": "0",
                  "position": "absolute",
                  "top": "0",
                  "zIndex": 2,
                }
              }
            >
              <Overlay
                innerRef={[Function]}
                overlayRoot={
                  .emotion-9 {
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-top-style: solid;
}

.emotion-13 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-top: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
}

.emotion-3 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-bottom: 8px;
}

.emotion-4 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
}

<body>
                    <div>
                      <div
                        data-popper-escaped="true"
                        data-popper-placement="bottom-end"
                        data-popper-reference-hidden="true"
                        style="z-index: 2; position: absolute; left: 0px; top: 0px; visibility: hidden; pointer-events: none; transform: translate(0px, 0px);"
                      >
                        <div
                          aria-labelledby="downshift-1-label"
                          class="emotion-4"
                          data-cy="popover"
                          id="downshift-1-menu"
                          role="listbox"
                          style="overflow: auto; max-height: 768px; max-width: 0px;"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-3"
                              data-cy="PopoverListItem"
                              id="downshift-1-item-3"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div>
                      <div
                        style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                      >
                        <div
                          aria-labelledby="downshift-3-label"
                          class="emotion-13"
                          data-cy="popover"
                          id="downshift-3-menu"
                          role="listbox"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-3"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                          </div>
                          <div
                            class="emotion-9"
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-3"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-3"
                              role="option"
                            >
                              Restart Delay
                            </div>
                          </div>
                          <div
                            class="emotion-9"
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-4"
                              role="option"
                            >
                              Pause
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-3"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-5"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </body>
                }
                style={
                  Object {
                    "left": "0",
                    "position": "absolute",
                    "top": "0",
                    "zIndex": 2,
                  }
                }
              >
                <Portal
                  containerInfo={
                    .emotion-4 {
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-top-style: solid;
}

.emotion-8 {
  background-color: var(--themeBgPrimary,#FFFFFF);
  border-radius: 6px;
  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  border-width: 1px;
  border-color: var(--themeBorder,#DADDE2);
  border-style: solid;
  overflow-x: hidden;
}

.emotion-0 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-top: 8px;
}

.emotion-1 {
  box-sizing: border-box;
  cursor: pointer;
  min-width: 100%;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: table;
  margin-bottom: 8px;
}

<div>
                      <div
                        style="z-index: 2; position: absolute; left: 0px; top: 0px;"
                      >
                        <div
                          aria-labelledby="downshift-3-label"
                          class="emotion-8"
                          data-cy="popover"
                          id="downshift-3-menu"
                          role="listbox"
                        >
                          <div
                            class=""
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-0"
                              role="option"
                            >
                              Edit
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-1"
                              role="option"
                            >
                              Scale
                            </div>
                          </div>
                          <div
                            class="emotion-4"
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-2"
                              role="option"
                            >
                              Restart
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-3"
                              role="option"
                            >
                              Restart Delay
                            </div>
                          </div>
                          <div
                            class="emotion-4"
                          >
                            <div
                              aria-selected="false"
                              class="emotion-0"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-4"
                              role="option"
                            >
                              Pause
                            </div>
                            <div
                              aria-selected="false"
                              class="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-5"
                              role="option"
                            >
                              Stop
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  }
                >
                  <div
                    style={
                      Object {
                        "left": "0",
                        "position": "absolute",
                        "top": "0",
                        "zIndex": 2,
                      }
                    }
                  >
                    <Popover
                      aria-labelledby="downshift-3-label"
                      id="downshift-3-menu"
                      menuRef={[Function]}
                      role="listbox"
                    >
                      <div
                        aria-labelledby="downshift-3-label"
                        className="emotion-9"
                        data-cy="popover"
                        id="downshift-3-menu"
                        role="listbox"
                        style={
                          Object {
                            "maxHeight": undefined,
                            "maxWidth": undefined,
                            "width": undefined,
                          }
                        }
                      >
                        <div
                          className=""
                          key="dropdown-0"
                        >
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-0"
                            index={0}
                            isActive={false}
                            key=".$edit"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-0"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Edit
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-1"
                            index={1}
                            isActive={false}
                            key=".$scale"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-2"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-1"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Scale
                            </div>
                          </PopoverListItem>
                        </div>
                        <div
                          className="emotion-5"
                          key="dropdown-1"
                        >
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-2"
                            index={0}
                            isActive={false}
                            key=".$restart"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-2"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Restart
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-3"
                            index={1}
                            isActive={false}
                            key=".$restartDelay"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-2"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-3"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Restart Delay
                            </div>
                          </PopoverListItem>
                        </div>
                        <div
                          className="emotion-5"
                          key="dropdown-2"
                        >
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-4"
                            index={0}
                            isActive={false}
                            key=".$pause"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-1"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-4"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Pause
                            </div>
                          </PopoverListItem>
                          <PopoverListItem
                            aria-selected={false}
                            id="downshift-3-item-5"
                            index={1}
                            isActive={false}
                            key=".$stop"
                            listLength={2}
                            onClick={[Function]}
                            onMouseDown={[Function]}
                            onMouseMove={[Function]}
                            role="option"
                          >
                            <div
                              aria-selected={false}
                              className="emotion-2"
                              data-cy="PopoverListItem"
                              id="downshift-3-item-5"
                              onClick={[Function]}
                              onMouseDown={[Function]}
                              onMouseMove={[Function]}
                              role="option"
                            >
                              Stop
                            </div>
                          </PopoverListItem>
                        </div>
                      </div>
                    </Popover>
                  </div>
                </Portal>
              </Overlay>
            </ForwardRef>
          </DropdownContents>
        </clickOutside(DropdownContents)>
      </Dropdownable>
    </div>
  </Downshift>
</DropdownMenu>
`;
